@@ -50,7 +50,7 @@
       <input value="Disabled" disabled="true" type="submit"/>
     </form>
 
-    <img src="images/circle.png" id="image_id" name="image_name" class="image_class">
+    <img src="images/circle.png" id="image_id" name="image_name" class="image_class", alt="image_alt">
 
     <form id="form_id" class="form_class" name="form_name" action="/">
     </form>
